Fix tab wrapping in Chrome

--- a/cubedash/static/base.sass
+++ b/cubedash/static/base.sass
@@ -102,7 +102,6 @@ h2
 header
     color: #efefef
     padding: 0
-    width: fit-content
     display: flex
     flex-direction: row
 
@@ -110,7 +109,7 @@ header
     background-color: $header_highlight_strong
     position: relative
     border-collapse: collapse
-    max-width: 50%
+    max-width: 60%
 
     $active_color: darken($emphasis_strong, 5%)
     $item_padding: 15px 30px
